--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,12 @@
     },
     "require": {
         "yiisoft/yii2": "~2.0.0"
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.11"
+    },
+    "scripts": {
+        "cs-fix": "php-cs-fixer fix --config=.php_cs",
+        "cs-check": "php-cs-fixer fix --config=.php_cs --dry-run --diff"
     }
 }
